<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="1" >

    <TableRow>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/alarm1" />

        <EditText
            android:id="@+id/text1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:maxLength="5" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_height="wrap_content"
            android:prompt="@string/prompt" />

        <CheckBox
            android:id="@+id/check1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="activateAlarm"
            android:text="@string/setAlarm" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/alarm2" />

        <EditText
            android:id="@+id/text2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:maxLength="5" />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/prompt" />

        <CheckBox
            android:id="@+id/check2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="activateAlarm"
            android:text="@string/setAlarm" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/alarm3" />

        <EditText
            android:id="@+id/text3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:maxLength="5" />

        <Spinner
            android:id="@+id/spinner3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/prompt" />

        <CheckBox
            android:id="@+id/check3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="activateAlarm"
            android:text="@string/setAlarm" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/alarm4" />

        <EditText
            android:id="@+id/text4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:maxLength="5" />

        <Spinner
            android:id="@+id/spinner4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/prompt" />

        <CheckBox
            android:id="@+id/check4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="activateAlarm"
            android:text="@string/setAlarm" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/alarm5" />

        <EditText
            android:id="@+id/text5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:maxLength="5" />

        <Spinner
            android:id="@+id/spinner5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/prompt" />

        <CheckBox
            android:id="@+id/check5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="activateAlarm"
            android:text="@string/setAlarm" />
    </TableRow>

</TableLayout>